syntax = "proto3";

import "common.proto";

option java_package = "com.ccc.grpc.proto";

service HelloService {

    rpc hello(CommonRequest) returns (CommonResponse){}
}



